# pold

./: .gitignore  AUTHORS  Makefile.am  bootstrap  bootstrap-configure  bootstrap-configure-debug  configure.ac
connman/: 0001-session-On-session-connect-check-service-is-already-.patch  0001-session_policy_pold-Add-session-plugin-for-remote-co.patch  0002-session-Add-set_active_session-helper.patch  0003-session-Add-policy-session_changed-callback.patch  0004-session-Add-policy-plugin-allowed-callback.patch  0005-session-Add-connect-disconnect-services.patch  0006-service-Add-autoconnect-getter.patch  0007-session_policy_pold-Add-session-plugin-for-remote-co.patch
gdbus/: object.c
policyserver/: policyserver.py  someuser.policies
src/: connman-manager.c  connman-manager.h  connman-notification.c  connman-notification.h  dbus-common.c  dbus-common.h  dbus-json.c  dbus-json.h  dbus.h  default.policy.in  fdo-dbus.c  fdo-dbus.h  http-client.c  http-client.h  log.c  log.h  main.c  pold-manager.c  pold-manager.h  pold.conf.in  pold.policy.in  pold.service.in  policy.c  policy.h  session.c  session.h
test/: dbus-json-test.c  gdbus.c  gdbus.h  http-client-test.c  policy-test.c
